Fixed double scroll

--- a/turpial/ui/qt/templates/style.css
+++ b/turpial/ui/qt/templates/style.css
@@ -67,6 +67,7 @@ table td {
 .message {
     font-family: 'Pontano Sans', sans-serif;
     font-size: 13px;
+    word-break: break-word;
 }
 
 .footer {
